# ZenlessZoneZero-OneDragon

./: .coderabbit.yaml  .gitignore  .pylintrc  AGENTS.md  IMPLEMENTATION_PLAN.md  TODO_分析报告.md  pyproject.toml  test_import.py  test_simple.py  test_simple_import.py
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  build-running-resources.yml  code-quality.yml  common-set-timestamp.yml  issue-automation.yml  lock-closed-issues.yml  mirrorchyan_release_note.yml  mirrorchyan_uploading.yml  update-contributors.yml  update-redemption-code.yml
assets/game_data/: compendium_data.yml  map_area.yml
config/: project.yml  redemption_codes.sample.yml
config/auto_battle/: 专属配队-艾莲.merged.yml  专属配队-莱卡恩.merged.yml  专属配队-莱特.merged.yml  全配队通用.merged.yml  全配队通用.sample.yml  击破站场-强攻速切.merged.yml  异常站场-强攻速切.merged.yml  强攻站场-击破支援速切.merged.yml  自动守护.merged.yml
config/auto_battle_operation/: 仪玄-凸.sample.yml  伊德海莉-终结技.sample.yml  伊芙琳-终结技.sample.yml  凯撒-终结技.sample.yml  千夏-特殊攻击.sample.yml  千夏-终结技.sample.yml  南宫羽-强化特殊技.sample.yml  南宫羽-普通攻击.sample.yml  南宫羽-长按普攻.sample.yml  卢西娅-终结技.sample.yml  叶瞬光-乱砍.sample.yml  叶瞬光-变身.sample.yml  叶瞬光-终结技-收.sample.yml  叶瞬光-终结技-起.sample.yml  奥菲丝-终结技.sample.yml  妮可-终结技.sample.yml  希希芙-EA.sample.yml  希希芙-支援攻击.sample.yml  希希芙-普通普攻.sample.yml  希希芙-终结技.sample.yml  希希芙-连携攻击.sample.yml  希希芙-长按普攻.sample.yml  希希芙-闪A.sample.yml  席德-强化特殊技.sample.yml  席德-终结技.sample.yml  悠真-终结技.sample.yml  悠真-自动EA.sample.yml  扳机-终结技.sample.yml  普罗米娅-支援攻击.sample.yml  普罗米娅-普通攻击.sample.yml  普罗米娅-终结技.sample.yml  普罗米娅-连携攻击.sample.yml  普罗米娅-长按普攻.sample.yml  普罗米娅-闪A.sample.yml  朱鸢-终结技.sample.yml  柏妮思-终结技.sample.yml  柳-终结技.sample.yml  格莉丝-终结技.sample.yml  橘福福-终结技.sample.yml  派派-终结技.sample.yml  (+39 more)
config/auto_battle_state_handler/: 叶瞬光-失衡决策.sample.yml  支援攻击模板-特殊情况.sample.yml  轮换-合轴-全角色.sample.yml  轮换-紧急-全角色.sample.yml  连携模板-爱芮.sample.yml  连携模板-通用.sample.yml  速切模板-全角色.sample.yml  (+10 more)
deploy/: OneDragon-RuntimeLauncher.spec  build_full.bat  generate_module_manifest.py  hook_path_inject.py  module_manifest.py
plugins/: README.md
skills/: SKILL.md
src/: test_import.py
(+473 files in other folders)
